samples/_failures_safe/1761563525_9680b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7db0379e.c: In function ‘main’:
./samples/SAFE/__tmp_7db0379e.c:156:5: error: expected expression at end of input
  156 |     if (
      |     ^~
./samples/SAFE/__tmp_7db0379e.c:156:5: error: expected declaration or statement at end of input
